# calc-llvm

./: .gitignore  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  AbstractSyntexTree.h  CMakeLists.txt  Driver.cpp  Driver.h  Lexer.cpp  Lexer.h  Library.cpp  Library.h  MainJIT.cpp  MainJIT.h  Parser.cpp  Parser.h  Version.h.in  main.cpp
legacy/: Lexer.h  MainJIT.h
test/: TestLexer.cpp
